Changed app name and added title
Changed the app name and added a title for FAQ GUI

--- a/chatbot_baby_yoda/src/app/faq/faq.component.html
+++ b/chatbot_baby_yoda/src/app/faq/faq.component.html
@@ -6,6 +6,7 @@
     <title>Frequently Asked Questions</title>
 </head>
 <body>
+    <h3>Frequently asked questions</h3>
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea fuga impedit corrupti. Distinctio modi sunt animi similique aut possimus, alias nam vero ipsa quos eligendi quisquam ducimus quam, repellat illo?</p>
     </div>
