Added the mainframe of the chatbot flow
Added the required functionality for the chatbot to work with a answer-question based flow

--- a/chatbot_baby_yoda/src/app/chatbot/chatbot.component.html
+++ b/chatbot_baby_yoda/src/app/chatbot/chatbot.component.html
@@ -1,22 +1,31 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,300">
-<link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
-<link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400&family=Finger+Paint&display=swap"> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,300">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400&family=Finger+Paint&display=swap"> 
+    <title>Chatter box!</title>
+</head>
 <body>
     <div class="card">
         <div id="header">
             <h1>Chatter box!</h1>
         </div>
         <div id="message-section">
-            <div class="message" id="bot"><span id="bot-response">Hello.. I'm listening! Go on..</span></div>
+            <div *ngFor='let message of allMessages'>
+                <div class="message" [id]="message.sender">
+                    <span [id]="message.sender + '-response'">{{ message.text }}</span>
+                </div>
+            </div>
         </div>
         <div id="input-section">
-            <input id="input" type="text" placeholder="Type a message" autocomplete="off" autofocus="autofocus" />
-            <button class="send" onclick="sendMessage()">
+            <input id="input" type="text" [(ngModel)]='messageToSave' name='messageToSave' placeholder="Type a message" autocomplete="off" autofocus="autofocus" />
+            <button class="send" (click)='chatBotFlow()'>
                 <div class="circle"><i class="zmdi zmdi-mail-send"></i></div>
             </button>
         </div>
     </div>
-    
 </body>
+</html>
