Changed chatbot details
Added smalll changes to the chatbot display

--- a/chatbot_baby_yoda/src/app/chatbot/chatbot.component.html
+++ b/chatbot_baby_yoda/src/app/chatbot/chatbot.component.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div>
-        <df-messenger intent="WELCOME" chat-title="chatbot-sistemas-expertos-2024"
-            agent-id="0e9485cd-8bda-4975-8d71-fb74d1fc5d46" language-code="en">
+        <df-messenger 
+            intent="WELCOME" 
+            chat-title="TripMate"
+            agent-id="0e9485cd-8bda-4975-8d71-fb74d1fc5d46" 
+            language-code="en">
         </df-messenger>
     </div>
 </body>
