--- a/chatbot_baby_yoda/src/app/chatbot/chatbot.component.html
+++ b/chatbot_baby_yoda/src/app/chatbot/chatbot.component.html
@@ -3,10 +3,43 @@
 <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,300">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400&family=Finger+Paint&display=swap"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400&family=Finger+Paint&display=swap">
     <title>Chatter box!</title>
 </head>
 <body>
+    <div class="hero-container">
+      <div class="hero-text">
+        <h1>Welcome to Discover Destinations</h1>
+        <p>Your gateway to unforgettable adventures and seamless travel experiences.</p>
+      </div>
+      <img src="assets/trave.jpg" alt="Hero Image" class="hero-image">
+    </div>
+
+    <div class="popular-destinations-container">
+      <h2>Popular Destinations</h2>
+      <div class="popular-destinations">
+        <div class="destination-card">
+          <img src="assets/cancun.webp" alt="Destination 1">
+          <h3>Beaches of Cancún, Mexico</h3>
+        </div>
+        <div class="destination-card">
+          <img src="assets/alpes.jpeg" alt="Destination 2">
+          <h3>Mountains of the Swiss Alps</h3>
+        </div>
+        <div class="destination-card">
+          <img src="assets/italy.jpeg" alt="Destination 3">
+          <h3>Historical Cities of Italy</h3>
+        </div>
+        <div class="destination-card">
+          <img src="assets/safari.webp" alt="Destination 4">
+          <h3>Safari in South Africa</h3>
+        </div>
+        <div class="destination-card">
+          <img src="assets/greek.webp" alt="Destination 5">
+          <h3>Greek Islands</h3>
+        </div>
+      </div>
+    </div>
     <div>
         <df-messenger intent="WELCOME" chat-title="chatbot-sistemas-expertos-2024"
             agent-id="0e9485cd-8bda-4975-8d71-fb74d1fc5d46" language-code="en">
