--- a/chatbot_baby_yoda/src/app/navbar/navbar.component.css
+++ b/chatbot_baby_yoda/src/app/navbar/navbar.component.css
@@ -1,8 +1,8 @@
 .topnav {
-    background-color: #333;
+    background-color: black;
     overflow: hidden;
   }
-  
+
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
@@ -12,13 +12,13 @@
     text-decoration: none;
     font-size: 17px;
   }
-  
+
   /* Change the color of links on hover */
   .topnav a:hover {
     background-color: #ddd;
     color: black;
   }
-  
+
   /* Add a color to the active/current link */
   .topnav a.active {
     background-color: #04AA6D;
