--- a/chatbot_baby_yoda/src/app/chatbot/chatbot.component.html
+++ b/chatbot_baby_yoda/src/app/chatbot/chatbot.component.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,300">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400&family=Finger+Paint&display=swap">
@@ -46,10 +47,10 @@
   </div>
 
     <div>
-        <df-messenger 
-            intent="WELCOME" 
+        <df-messenger
+            intent="WELCOME"
             chat-title="TripMate"
-            agent-id="0e9485cd-8bda-4975-8d71-fb74d1fc5d46" 
+            agent-id="0e9485cd-8bda-4975-8d71-fb74d1fc5d46"
             language-code="en">
         </df-messenger>
     </div>
