Added Mainframe of FAQ Component
Added the required HTML and CSS to stylize and create FAQ component content

--- a/chatbot_baby_yoda/src/app/faq/faq.component.html
+++ b/chatbot_baby_yoda/src/app/faq/faq.component.html
@@ -4,11 +4,124 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frequently Asked Questions</title>
+    <link rel="stylesheet" href="faq.component.css">
 </head>
 <body>
-    <h3>Frequently asked questions</h3>
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea fuga impedit corrupti. Distinctio modi sunt animi similique aut possimus, alias nam vero ipsa quos eligendi quisquam ducimus quam, repellat illo?</p>
+    <div class="faq-container">
+        <h2>Frequently Asked Questions:</h2>
+        <details id="generalQuestions" class="faq-section">
+            <summary>General Questions:</summary>
+            <div>
+                <details>
+                    <summary>What is a travel agent chatbot?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, iste? Dolorum hic illo porro soluta dolore eos pariatur aspernatur odit, aut voluptas perspiciatis est! Officiis saepe quis magni et animi!</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>How does the chatbot work?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam earum aliquid repudiandae ratione eos explicabo delectus illo eligendi enim laborum, voluptates odio saepe impedit illum facere, esse vitae. Quisquam, aperiam.</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>Is the chatbot available 24/7?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti odit, tempora error dolorum iure quisquam. Officiis amet architecto repellendus at consequatur rerum mollitia, ut repellat ex non veritatis blanditiis suscipit.</p>
+                    </div>
+                </details>
+            </div>
+        </details>
+
+        <details id="booking" class="faq-section">
+            <summary>Booking and Reservations:</summary>
+            <div>
+                <details>
+                    <summary>How can I book a flight/hotel through the chatbot?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, iste? Dolorum hic illo porro soluta dolore eos pariatur aspernatur odit, aut voluptas perspiciatis est! Officiis saepe quis magni et animi!</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>Can I change or cancel my booking through the chatbot?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam earum aliquid repudiandae ratione eos explicabo delectus illo eligendi enim laborum, voluptates odio saepe impedit illum facere, esse vitae. Quisquam, aperiam.</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>What information do I need to provide to make a booking?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti odit, tempora error dolorum iure quisquam. Officiis amet architecto repellendus at consequatur rerum mollitia, ut repellat ex non veritatis blanditiis suscipit.</p>
+                    </div>
+                </details>
+            </div>
+        </details>
+
+        <details id="travelInfo" class="faq-section">
+            <summary>Travel Information:</summary>
+            <div>
+                <details>
+                    <summary>How can I check my booking status?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, iste? Dolorum hic illo porro soluta dolore eos pariatur aspernatur odit, aut voluptas perspiciatis est! Officiis saepe quis magni et animi!</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>Can the chatbot provide travel recommendations?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam earum aliquid repudiandae ratione eos explicabo delectus illo eligendi enim laborum, voluptates odio saepe impedit illum facere, esse vitae. Quisquam, aperiam.</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>How do I get travel insurance?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti odit, tempora error dolorum iure quisquam. Officiis amet architecto repellendus at consequatur rerum mollitia, ut repellat ex non veritatis blanditiis suscipit.</p>
+                    </div>
+                </details>
+            </div>
+        </details>
+
+        <details id="support" class="faq-section">
+            <summary>Support and Troubleshooting:</summary>
+            <div>
+                <details>
+                    <summary>What if the chatbot cannot answer my question?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, iste? Dolorum hic illo porro soluta dolore eos pariatur aspernatur odit, aut voluptas perspiciatis est! Officiis saepe quis magni et animi!</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>How do I give feedback about the chatbot?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam earum aliquid repudiandae ratione eos explicabo delectus illo eligendi enim laborum, voluptates odio saepe impedit illum facere, esse vitae. Quisquam, aperiam.</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>I encountered a technical issue, what should I do?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti odit, tempora error dolorum iure quisquam. Officiis amet architecto repellendus at consequatur rerum mollitia, ut repellat ex non veritatis blanditiis suscipit.</p>
+                    </div>
+                </details>
+            </div>
+        </details>
+
+        <details id="privacy" class="faq-section">
+            <summary>Privacy and Security:</summary>
+            <div>
+                <details>
+                    <summary>Is my personal information safe with the chatbot?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, iste? Dolorum hic illo porro soluta dolore eos pariatur aspernatur odit, aut voluptas perspiciatis est! Officiis saepe quis magni et animi!</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>How do I delete my data from the chatbot?</summary>
+                    <div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam earum aliquid repudiandae ratione eos explicabo delectus illo eligendi enim laborum, voluptates odio saepe impedit illum facere, esse vitae. Quisquam, aperiam.</p>
+                    </div>
+                </details>
+            </div>
+        </details>
     </div>
 </body>
 </html>
